kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-big-query
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: python-big-query
  template:
    metadata:
      labels:
        deployment: python-big-query
    spec:
      containers:
      - name: python-big-query
        image: quay.io/jbride/python-big-query:0.0.1
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /deployments/config
          name: config
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: python-big-query-auth.json
            path: python-big-query-auth.json
          name: big-query-auth
          optional: false
        name: config
