kustomize/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: python-big-query
spec:
  selector:
    deployment: python-big-query
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
